Atualizado o modo responsivo

--- a/loja/adubo.html
+++ b/loja/adubo.html
@@ -21,6 +21,9 @@
                 <li><a href="../#contato">Contato</a></li>
             </ul>
         </nav>
+        <div class="btn-abrir-menu" id="btn-menu">
+            <i class="fa-solid fa-list"></i>
+        </div>
     </header>
    
     <h2>Adubos</h2>
@@ -63,20 +66,16 @@
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> Facebook</a><br>
+                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a><br>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> Instagram</a><br>
+                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a><br>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                Youtube</a>
+                <p>Youtube</p></a>
         </div>
     </div>
 
     <div class="wats">
         <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
-    </div>
-
-    <div class="btn-abrir-menu" id="btn-menu">
-        <i class="fa-solid fa-list"></i>
     </div>
 
     <div class="menu-mobile" id="menu-mobile">
