--- a/wats.html
+++ b/wats.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fale conosco</title>
+    <title>whatsapp</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="menu.js" defer></script>
+
 </head>
 
 <body>
 
+
+
     <header id="header">
+
+
         <div class="logo">
             <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
         </div>
@@ -25,16 +30,16 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
-        
         <div class="btn-abrir-menu" id="btn-menu">
             <i class="fa-solid fa-list"></i>
         </div>
+
     </header>
 
     <div class="recado">
-        <p>Clique no botão abaixo<br>para ser redirecionado ao nosso Whatsapp empresarial<br>e prosseguir com suas compras
+        <p>Clique no botão abaixo<br>para ser redirecionado ao nosso Whatsapp empresarial<br>e prosseguir com sua compra
         </p>
-        <a href="http://wa.me/5511970807642" target="_blank">Clique aqui</a>
+        <a href="http://wa.me/5511970807642">Clique aqui</a>
     </div>
 
     <div id="contato">
@@ -42,19 +47,27 @@
             <h3>Atendimento</h3>
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
-            <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: <br><br> 9:00 às 18:00</p>
-        </div>
+            <!-- <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p> -->
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
+
+
+        </div>
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a><br>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a><br>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
+
     </div>
 
     <div class="wats">
@@ -73,7 +86,10 @@
             </ul>
         </nav>
     </div>
-   
+
     <div class="overlay-menu" id="overlay-menu"></div>
+
+
 </body>
+
 </html>
