--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,97 +10,117 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="menu.js" defer></script>
+
 </head>
+
 
 <body>
     <div class="bg_video">
         <video autoplay muted loop>
             <source src="video/logovid.mp4" type="video/mp4">
         </video>
+         
     </div>
+    <header id="header">
 
-    <header id="header">        
+
+
         <div class="logo">
             <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
         </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="loja.html">Loja</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
-        
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+
         <div class="btn-abrir-menu" id="btn-menu">
             <i class="fa-solid fa-list"></i>
         </div>
+
     </header>
 
     <h2 id="cate">Categorias</h2>
-        <section class="produtos">
-            <a href="loja/plantasornamentais.html">
-                <div class="img-categorias">
-                    <img src="img/vasodeplanta.jpg">
-                    <p>Plantas Ornamentais</p>
-                </div>
-            </a>
-            <a href="loja/vasos.html">
-                <div class="img-categorias">
-                    <img src="img/vasos diversos.webp">
-                    <p>Vasos</p>
-                </div>
-            </a>
-            <a href="loja/adubo.html">
-                <div class="img-categorias">
-                    <img src="img/adubo na mao.jpg">
-                    <p>Adubo</p>
-                </div>
-            </a>
-            <a href="loja/acessorios.html">
-                <div class="img-categorias">
-                    <img src="img/acesssorios diversos.png">
-                    <p>Acessórios</p>
-                </div>
-            </a>
-        </section>
 
-        <div id="contato">
-            <div class="atendimento">
-                <h3>Atendimento</h3>
-                <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
-                <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
-                <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-                <p><i class="fa-solid fa-clock"></i> Horário de atendimento: <br><br> 9:00 às 18:00</p>
+    <section class="produtos">
+        <a href="loja/plantasornamentais.html">
+            <div class="img-categorias">
+                <img src="img/vasodeplanta.jpg">
+                <p>Plantas Ornamentais</p>
             </div>
+        </a>
+        <a href="loja/vasos.html">
+            <div class="img-categorias">
+                <img src="img/vasos diversos.webp">
+                <p>Vasos</p>
+            </div>
+        </a>
+        <a href="loja/adubo.html">
+            <div class="img-categorias">
+                <img src="img/adubo na mao.jpg">
+                <p>Adubo</p>
+            </div>
+        </a>
+        <a href="loja/acessorios.html">
+            <div class="img-categorias">
+                <img src="img/acesssorios diversos.png">
+                <p>Acessórios</p>
+            </div>
+        </a>
 
-            <div class="redesociais">
-                <h3>Rede sociais</h3>
-                <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                        class="fa-brands fa-facebook"></i> <p>Facebook</p></a><br>
-                <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                        class="fa-brands fa-instagram"></i> <p>Instagram</p></a><br>
-                <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                    <p>Youtube</p></a>
-            </div>
+
+    </section>
+
+
+    <div id="contato">
+        <div class="atendimento">
+            <h3>Atendimento</h3>
+            <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
+            <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
+            <!-- <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p> -->
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
+
+
+
+        </div>
+        <div class="redesociais">
+            <h3>Rede sociais</h3>
+            <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
+            <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
+            <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
+                <p>Youtube</p>
+            </a>
         </div>
 
-        <div class="wats">
-            <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
 
-        <div class="menu-mobile" id="menu-mobile">
-            <div class="btn-fechar">
-                <i class="fa-regular fa-circle-xmark"></i>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="loja.html">Loja</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
+    </div>
+
+    <div class="wats">
+        <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+
+    <div class="menu-mobile" id="menu-mobile">
+        <div class="btn-fechar">
+            <i class="fa-regular fa-circle-xmark"></i>
         </div>
-       
-        <div class="overlay-menu" id="overlay-menu"></div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="loja.html">Loja</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="overlay-menu" id="overlay-menu"></div>
 </body>
+
 </html>
