--- a/loja.html
+++ b/loja.html
@@ -10,10 +10,12 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="menu.js" defer></script>
+
 </head>
 
 <body>
     <header id="header">
+
         <a href="index.html"><img src="img/plantslogo.png" class="img"></a>
         <nav>
             <ul>
@@ -26,144 +28,154 @@
             <i class="fa-solid fa-list"></i>
         </div>
     </header>
-
     <h2>Plantas Ornamentais</h2>
+
     <section class="produtos">
         <div class="img-produtos">
             <img src="img/Aspargo.webp">
             <p>Aspargo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/Espada de Sao Jorge.webp">
             <p>Espada de São Jorge</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/jabuticabeira.jpg">
             <p>Jabuticabeira</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/samambaia.webp">
             <p>Samambaia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
 
     </section>
-
     <h3>Vasos</h3>
     <section class="produtos">
         <div class="img-produtos">
             <img src="img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/bacia.webp">
             <p>Vaso bacia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/vasotreccia.webp">
             <p>Vaso tressia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
-
     <h3>Adubo</h3>
     <section class="produtos">
         <div class="img-produtos">
             <img src="img/adubodegalinha.webp">
             <p>Esterco de galinha</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/adubopoly-feed.webp">
             <p>Adubo quimico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/adubobovino.webp">
             <p>Esterco bovino</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/humosdeminhoca.webp">
             <p>Humos de minhoca</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
 
     <h3>Acessórios</h3>
+
     <section class="produtos">
         <div class="img-produtos">
             <img src="img/luva.webp">
             <p>Luva</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/pazinha.webp">
             <p>Pazinha</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/porta adubo.webp">
             <p>Porta adubo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="img/rastelo.webp">
             <p>Rastelo</p>
-            <p>Preço R$</p>
-            <a id="botao" href="wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="wats.html">Saiba mais</a>
         </div>
     </section>
+
+
+
 
     <div id="contato">
         <div class="atendimento">
             <h3>Atendimento</h3>
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
-            <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: <br><br> 9:00 às 18:00</p>
-        </div>
+            <!-- <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p> -->
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
+
+
+        </div>
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a><br>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a><br>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
+
     </div>
 
     <div class="wats">
         <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
- 
+
     <div class="menu-mobile" id="menu-mobile">
         <div class="btn-fechar">
             <i class="fa-regular fa-circle-xmark"></i>
@@ -176,7 +188,9 @@
             </ul>
         </nav>
     </div>
-   
+
     <div class="overlay-menu" id="overlay-menu"></div>
+
 </body>
+
 </html>
