--- a/loja/vasos.html
+++ b/loja/vasos.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilo.css">
-    <title>Vasos</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="../menu.js" defer></script>
+
 </head>
+
 <body>
     <header id="header">
-       
+
         <div class="logo">
             <a href="../index.html"><img src="../img/plantslogo.png" class="img"></a>
         </div>
@@ -31,26 +36,26 @@
         <div class="img-produtos">
             <img src="../img/vasos ceramico.webp">
             <p>Vaso ceramico</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/bacia.webp">
             <p>Vaso bacia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasomarmorizado.webp">
             <p>Vasomarmorizado</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
         <div class="img-produtos">
             <img src="../img/vasotreccia.webp">
             <p>Vaso tressia</p>
-            <p>Preço R$</p>
-            <a id="botao" href="../wats.html">Saiba Mais</a>
+            <!-- <p>Preço R$</p> -->
+            <a id="botao" href="../wats.html">Saiba mais</a>
         </div>
     </section>
 
@@ -59,23 +64,32 @@
             <h3>Atendimento</h3>
             <p><i class="fa-solid fa-phone"></i> 11 97080-7642</p>
             <p><i class="fa-brands fa-whatsapp"></i> 11 97080-7642</p>
-            <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p>
-            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: <br><br> 9:00 às 18:00</p>
-        </div>
+            <!-- <p><i class="fa-solid fa-envelope"></i> xxxx@gmail.com</p> -->
+            <p><i class="fa-solid fa-clock"></i> Horário de atendimento: 9:00 às 18:00</p>
 
+
+
+        </div>
         <div class="redesociais">
             <h3>Rede sociais</h3>
             <a href="https://www.facebook.com/profile.php?id=100089811708008&mibextid=ZbWKwL"><i
-                    class="fa-brands fa-facebook"></i> <p>Facebook</p></a><br>
+                    class="fa-brands fa-facebook"></i>
+                <p>Facebook</p>
+            </a>
             <a href="https://www.instagram.com/plantasnalaje41?igsh=MTJvbWJwZzAyNGxicA=="><i
-                    class="fa-brands fa-instagram"></i> <p>Instagram</p></a><br>
+                    class="fa-brands fa-instagram"></i>
+                <p>Instagram</p>
+            </a>
             <a href="https://youtube.com/@Plantasnalaje?si=JXxdOP2qqWGEd1bL"><i class="fa-brands fa-youtube"></i>
-                <p>Youtube</p></a>
+                <p>Youtube</p>
+            </a>
         </div>
+
+
     </div>
 
     <div class="wats">
-        <a href="wats.html"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="../wats.html"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
 
     <div class="menu-mobile" id="menu-mobile">
@@ -86,11 +100,12 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../loja.html">Loja</a></li>
-                <li><a href="../#contato">Contato</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </div>
-   
+
     <div class="overlay-menu" id="overlay-menu"></div>
 </body>
+
 </html>
